- (djm) Bug #573 - Remove unneeded Krb headers and compat goop. Patch from    simon@sxw.org.uk (Also matches a change in OpenBSD a while ago)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 20030603
+ - (djm) Bug #573 - Remove unneeded Krb headers and compat goop. Patch from
+   simon@sxw.org.uk (Also matches a change in OpenBSD a while ago)
+
+20030603
  - (djm) Replace setproctitle replacement with code derived from 
    UCB sendmail
  - (djm) OpenBSD CVS Sync
