--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@
    - djm@cvs.openbsd.org 2003/06/04 10:23:48
      [sshd.c]
      remove duplicated group-dropping code; ok markus@
+ - (djm) Update to fix of bug #584: lock card before return. 
+   From larsch@trustcenter.de
 
 20030603
  - (djm) Replace setproctitle replacement with code derived from 
