--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 20030605
  - (djm) Support AI_NUMERICHOST in fake-getaddrinfo.c. Needed for recent
    canohost.c changes.
+ - (djm) Implement paranoid priv dropping checks, based on:
+   "SetUID demystified" - Hao Chen, David Wagner and Drew Dean
+   Proceedings of USENIX Security Symposium 2002
 
 20030604
  - (djm) Bug #573 - Remove unneeded Krb headers and compat goop. Patch from
