--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
  - (djm) Implement paranoid priv dropping checks, based on:
    "SetUID demystified" - Hao Chen, David Wagner and Drew Dean
    Proceedings of USENIX Security Symposium 2002
+ - (djm) Don't use xmalloc() or pull in toplevel headers in fake-* code
 
 20030604
  - (djm) Bug #573 - Remove unneeded Krb headers and compat goop. Patch from
