--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
    "SetUID demystified" - Hao Chen, David Wagner and Drew Dean
    Proceedings of USENIX Security Symposium 2002
  - (djm) Don't use xmalloc() or pull in toplevel headers in fake-* code
+ - (djm) Merge all the openbsd/fake-* into fake-rfc2553.[ch]
 
 20030604
  - (djm) Bug #573 - Remove unneeded Krb headers and compat goop. Patch from
