--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    Proceedings of USENIX Security Symposium 2002
  - (djm) Don't use xmalloc() or pull in toplevel headers in fake-* code
  - (djm) Merge all the openbsd/fake-* into fake-rfc2553.[ch]
+ - (djm) Bug #588 - Add scard-opensc.o back to Makefile.in
+   Patch from larsch@trustcenter.de
 
 20030604
  - (djm) Bug #573 - Remove unneeded Krb headers and compat goop. Patch from
