--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
  - (djm) Merge all the openbsd/fake-* into fake-rfc2553.[ch]
  - (djm) Bug #588 - Add scard-opensc.o back to Makefile.in
    Patch from larsch@trustcenter.de
+ - (djm) Bug #589 - scard-opensc: load only keys with a private keys
+   Patch from larsch@trustcenter.de
 
 20030604
  - (djm) Bug #573 - Remove unneeded Krb headers and compat goop. Patch from
