--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
    Patch from larsch@trustcenter.de
  - (djm) Bug #589 - scard-opensc: load only keys with a private keys
    Patch from larsch@trustcenter.de
+ - (dtucker) Add includes.h to fake-rfc2553.c so it will build.
 
 20030604
  - (djm) Bug #573 - Remove unneeded Krb headers and compat goop. Patch from
