--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@
  - (djm) Bug #589 - scard-opensc: load only keys with a private keys
    Patch from larsch@trustcenter.de
  - (dtucker) Add includes.h to fake-rfc2553.c so it will build.
+ - (dtucker) Define EAI_NONAME in fake-rfc2553.h (used by fake-rfc2553.c).
 
 20030604
  - (djm) Bug #573 - Remove unneeded Krb headers and compat goop. Patch from
