--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20030606
+ - (dtucker) [uidswap.c] Fix setreuid and add missing args to fatal(). ok djm@
+
 20030605
  - (djm) Support AI_NUMERICHOST in fake-getaddrinfo.c. Needed for recent
    canohost.c changes.
