- (djm) Sync README.smartcard with OpenBSD -current

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20030609
+ - (djm) Sync README.smartcard with OpenBSD -current
+
 20030606
  - (dtucker) [uidswap.c] Fix setreuid and add missing args to fatal(). ok djm@
 
