--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
      [reconfigure.sh]
      missing $SUDO; from dtucker@zip.com.au
  - (dtucker) [regress/authorized_keys_root] Remove temp data file from CVS.
+ - (dtucker) [openbsd-compat/setproctitle.c] Ensure SPT_TYPE is defined before
+   testing its value.
 
 20030618
  - (djm) OpenBSD CVS Sync
