--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    - markus@cvs.openbsd.org 2003/06/21 09:14:05
      [regress/reconfigure.sh]
      missing $SUDO; from dtucker@zip.com.au
+   - markus@cvs.openbsd.org 2003/06/18 11:28:11
      [ssh-rsa.c]
      backout last change, since it violates pkcs#1
      switch to share/misc/license.template
