--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030624
+ - (dtucker) Have configure refer the user to config.log and
+   contrib/findssl.sh for OpenSSL header/library mismatches.
+
 20030622
  - (dtucker) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2003/06/21 09:14:05
