--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
    - markus@cvs.openbsd.org 2003/06/26 20:08:33
      [readconf.c]
      do not dump core for 'ssh -o proxycommand host'; ok deraadt@
+ - (dtucker) [regress/dynamic-forward.sh] Import new regression test.
 
 20030624
  - (dtucker) Have configure refer the user to config.log and
