--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 20030628
+ - (djm) Bug #591: use PKCS#15 private key label as a comment in case 
+   of OpenSC. Report and patch from larsch@trustcenter.de
+
+20030628
  - (dtucker) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2003/06/23 09:02:44
      [ssh_config.5]
