--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
  - (dtucker) [acconfig.h auth-passwd.c configure.ac session.c port-aix.[ch]]
    Include AIX headers for authentication functions and make calls match
    prototypes.  Test for and handle 3-args and 4-arg variants of loginfailed.
+ - (dtucker) Check return value of setpcred().
 
 20030707
  - (dtucker) [configure.ac] Bug #600: Check that getrusage is declared before
