- (dtucker) Bug #543: [configure.ac port-aix.c port-aix.h]    Call setauthdb() before loginfailed(), which may load password registry-    specific functions.  Based on patch by cawlfiel@us.ibm.com.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
    loginfailed at all, so assume 3-arg loginfailed if not declared.
  - (dtucker) [port-aix.h] Work around name collision on AIX for r_type by
    undef'ing it.
+ - (dtucker) Bug #543: [configure.ac port-aix.c port-aix.h]
+   Call setauthdb() before loginfailed(), which may load password registry-
+   specific functions.  Based on patch by cawlfiel@us.ibm.com.
 
 20030708
  - (dtucker) [acconfig.h auth-passwd.c configure.ac session.c port-aix.[ch]]
