--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
  - (dtucker) Bug #543: [configure.ac port-aix.c port-aix.h]
    Call setauthdb() before loginfailed(), which may load password registry-
    specific functions.  Based on patch by cawlfiel@us.ibm.com.
+ - (dtucker) [port-aix.h] Fix prototypes.
 
 20030708
  - (dtucker) [acconfig.h auth-passwd.c configure.ac session.c port-aix.[ch]]
