--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030726
+ - (dtucker) [openbsd-compat/xcrypt.c] Fix typo: DISABLED_SHADOW ->
+   DISABLE_SHADOW.  Fixes HP-UX compile error.
+
 20030724
  - (bal) [auth-passwd.c openbsd-compat/Makefile.in openbsd-compat/xcrypt.c 
     openbsd-compat/xcrypt.h] Split off encryption into xcrypt() interface,
