--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20030802
+ - (dtucker) [monitor.h monitor_wrap.h] Remove excess ident tags.
+
 20030730
  - (djm) [auth-pam.c] Don't use crappy APIs like sprintf. Thanks bal
 
