- (dtucker) [canohost.c] Bug #336: Only check ip options if IP_OPTIONS is    defined (fixes compile error on really old Linuxes).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20030807
  - (dtucker) [session.c] Have session_break_req not attempt to send a break
    if TIOCSBRK and TIOCCBRK are not defined (eg Cygwin).
+ - (dtucker) [canohost.c] Bug #336: Only check ip options if IP_OPTIONS is
+   defined (eg really old Linux).
 
 20030802
  - (dtucker) [monitor.h monitor_wrap.h] Remove excess ident tags.
