--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20030808
+ - (dtucker) [openbsd-compat/fake-rfc2553.h] Older Linuxes have AI_PASSIVE and
+   AI_CANONNAME in netdb.h but not AI_NUMERICHOST, so check each definition
+   separately before defining them.
+
 20030807
  - (dtucker) [session.c] Have session_break_req not attempt to send a break
    if TIOCSBRK and TIOCCBRK are not defined (eg Cygwin).
