- (dtucker) [configure.ac] Move openpty/ctty test outside of case statement    and after normal openpty test.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
  - (dtucker) [defines.h] Put CMSG_DATA, CMSG_FIRSTHDR with other CMSG* macros,
    change CMSG_DATA to use __CMSG_ALIGN (and thus work properly), reformat for
    consistency.
+ - (dtucker) [configure.ac] Move openpty/ctty test outside of case statement
+   and after normal openpty test.
 
 20030813
  - (dtucker) [session.c] Remove #ifdef TIOCSBRK kludge.
