--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030822
+ - (djm) s/get_progname/ssh_get_progname/g to avoid conflict with Heimdal 
+   -lbroken; ok dtucker 
+
 20030821
  - (dtucker) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2003/08/14 16:08:58
