- (bal) openbsd-compat/ OpenBSD updates.  Mostly licensing, ansifications    and minor fixes.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20030825
  - (djm) Bug #621: Select OpenSC keys by usage attributes. Patch from 
    larsch@trustcenter.de
+ - (bal) openbsd-compat/ OpenBSD updates.  Mostly licensing, ansifications
+   and minor fixes.
 
 20030822
  - (djm) s/get_progname/ssh_get_progname/g to avoid conflict with Heimdal 
