--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20030826
+ - (djm) Bug #629: Mark ssh_config option "pamauthenticationviakbdint"
+   as deprecated. Remove mention from README.privsep. Patch from 
+   aet AT cc.hut.fi
+
 20030825
  - (djm) Bug #621: Select OpenSC keys by usage attributes. Patch from 
    larsch@trustcenter.de
