--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,7 @@
  - (dtucker) [Makefile.in acconfig.h auth-krb5.c auth-pam.c auth-pam.h
    configure.ac defines.h gss-serv-krb5.c session.c ssh-gss.h sshconnect1.c
    sshconnect2.c] Add Portable GSSAPI support, patch by Simon Wilkinson.
+ - (dtucker) [Makefile.in] Remove auth2-krb5.
 
 20030825
  - (djm) Bug #621: Select OpenSC keys by usage attributes. Patch from 
