--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,8 @@
    configure.ac defines.h gss-serv-krb5.c session.c ssh-gss.h sshconnect1.c
    sshconnect2.c] Add Portable GSSAPI support, patch by Simon Wilkinson.
  - (dtucker) [Makefile.in] Remove auth2-krb5.
+ - (dtucker) [contrib/aix/inventory.sh] Add public domain notice.  ok mouring@
+   (the original author)
 
 20030825
  - (djm) Bug #621: Select OpenSC keys by usage attributes. Patch from 
