--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,7 @@
  - (dtucker) [Makefile.in] Remove auth2-krb5.
  - (dtucker) [contrib/aix/inventory.sh] Add public domain notice.  ok mouring@
    (the original author)
+ - (dtucker) [auth.c] Do not check for locked accounts when PAM is enabled.
 
 20030825
  - (djm) Bug #621: Select OpenSC keys by usage attributes. Patch from 
