--- a/ChangeLog
+++ b/ChangeLog
@@ -47,6 +47,8 @@
    - markus@cvs.openbsd.org 2003/09/01 20:44:54
      [auth2-gss.c]
      fix leak
+ - (djm) Don't initialise pam_conv structures inline. Avoids HP/UX compiler
+   error. Part of Bug #423, patch from  michael_steffens AT hp.com
 
 20030829
  - (bal) openbsd-compat/ clean up.  Considate headers, add in Id on our
