--- a/ChangeLog
+++ b/ChangeLog
@@ -49,6 +49,9 @@
      fix leak
  - (djm) Don't initialise pam_conv structures inline. Avoids HP/UX compiler
    error. Part of Bug #423, patch from  michael_steffens AT hp.com
+ - (djm) Bug #423: reorder setting of PAM_TTY and calling of PAM session 
+   management (now done in do_setusercontext). Largely from 
+   michael_steffens AT hp.com
 
 20030829
  - (bal) openbsd-compat/ clean up.  Considate headers, add in Id on our
