--- a/ChangeLog
+++ b/ChangeLog
@@ -52,7 +52,8 @@
  - (djm) Bug #423: reorder setting of PAM_TTY and calling of PAM session 
    management (now done in do_setusercontext). Largely from 
    michael_steffens AT hp.com
-
+ - (djm) Fix openbsd-compat/ again - remove references to strl(cpy|cat).h 
+ 
 20030829
  - (bal) openbsd-compat/ clean up.  Considate headers, add in Id on our
    files, and added missing license to header.
