--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20030904
+ - (dtucker) Portablize regression tests.  Parts contributed by Roumen
+   Petrov, David M. Williams and Corinna Vinschen.
+   - [Makefile.in] Add "make tests" target and "make clean" hooks.
+
 20030903
  - (djm) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2003/08/26 09:58:43
