--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
  - (dtucker) Portablize regression tests.  Parts contributed by Roumen
    Petrov, David M. Williams and Corinna Vinschen.
    - [Makefile.in] Add "make tests" target and "make clean" hooks.
+   - [regress/agent-getpeereid.sh] Skip test on platforms that don't support
+     getpeereid.
 
 20030903
  - (djm) OpenBSD CVS Sync
