--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    - [Makefile.in] Add "make tests" target and "make clean" hooks.
    - [regress/agent-getpeereid.sh] Skip test on platforms that don't support
      getpeereid.
+   - [regress/agent-ptrace.sh] Skip tests if platform doesn't support it or
+     gdb cannot be found.
 
 20030903
  - (djm) OpenBSD CVS Sync
