--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
    - [regress/agent-ptrace.sh] Skip tests if platform doesn't support it or
      gdb cannot be found.
    - [regress/reconfigure/sh] Make path to sshd fully qualified if required.
+   - [regress/rekey.sh] Remove dependence on /dev/zero (not all platforms have
+     it).  The sparse file will take less disk space too.
 
 20030903
  - (djm) OpenBSD CVS Sync
