- [regress/sftp-cmds.sh] Ensure file used for test are readable.

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@
    - [regress/reconfigure/sh] Make path to sshd fully qualified if required.
    - [regress/rekey.sh] Remove dependence on /dev/zero (not all platforms have
      it).  The sparse file will take less disk space too.
+   - [regress/sftp-cmds.sh] Ensure file used for test are readable.
 
 20030903
  - (djm) OpenBSD CVS Sync
