--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@
      regress/ssh-com-client.sh regress/ssh-com-sftp.sh regress/stderr-data.sh
      regress/transfer.sh] Use ${EXEEXT} where appropriate.
    - [regress/sftp.sh] Remove dependency on /dev/stdin.
+   - [regress/agent-ptrace.sh regress/agent-timeout.sh]
+     "grep -q" -> "grep >/dev/null"
 
 20030903
  - (djm) OpenBSD CVS Sync
