--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,8 @@
    - [regress/sftp.sh] Remove dependency on /dev/stdin.
    - [regress/agent-ptrace.sh regress/agent-timeout.sh]
      "grep -q" -> "grep >/dev/null"
+   - [regress/agent.sh regress/proto-version.sh regress/ssh-com.sh
+     regress/test-exec.sh] Handle different was of echoing without newlines.
 
 20030903
  - (djm) OpenBSD CVS Sync
