--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
      "grep -q" -> "grep >/dev/null"
    - [regress/agent.sh regress/proto-version.sh regress/ssh-com.sh
      regress/test-exec.sh] Handle different was of echoing without newlines.
+   - [regress/dynamic-forward.sh] Some "which" programs output on stderr.
 
 20030903
  - (djm) OpenBSD CVS Sync
