- [regress/Makefile] Remove BSDisms.

--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,7 @@
    - [regress/sftp-cmds.sh] Use portable "test" option.
    - [regress/test-exec.sh] Use sudo, search for "whoami" equivalent, always
      use Strictmodes no, wait longer for sshd startup.
+   - [regress/Makefile] Remove BSDisms.
 
 20030903
  - (djm) OpenBSD CVS Sync
