--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    Put "which" inside quotes.
  - (dtucker) [dynamic-forward.sh forwarding.sh sftp-batch.sh (all regress/)]
    Add ${EXEEXT}: required to work on Cygwin.
+ - (dtucker) [regress/sftp-batch.sh] Make temporary batch file name more
+   distinctive, so "rm ${BATCH}.*" doesn't match the script itself.
 
 20030906
  - (dtucker) [acconfig.h configure.ac uidswap.c] Prefer setuid/setgid on AIX.
