--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
  - (dtucker) [regress/sftp-batch.sh] Make temporary batch file name more
    distinctive, so "rm ${BATCH}.*" doesn't match the script itself.
  - (dtucker) [regress/sftp-cmds.sh] Skip quoted file test on Cygwin.
+ - (dtucker) openbsd-compat/xcrypt.c] #elsif -> #elif
 
 20030906
  - (dtucker) [acconfig.h configure.ac uidswap.c] Prefer setuid/setgid on AIX.
