--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
  - (dtucker) [regress/sftp-cmds.sh] Skip quoted file test on Cygwin.
  - (dtucker) [openbsd-compat/xcrypt.c] #elsif -> #elif
  - (dtucker) [acconfig.h] Typo.
+ - (dtucker) [CREDITS Makefile.in configure.ac mdoc2man.awk mdoc2man.pl]
+   Replace mdoc2man.pl with mdoc2man.awk, provided by Peter Stuge.
 
 20030906
  - (dtucker) [acconfig.h configure.ac uidswap.c] Prefer setuid/setgid on AIX.
