--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    source tree.
  - (tim) [regress/agent-timeout.sh] s/TIMEOUT/SSHAGENT_TIMEOUT/ Fixes conflict
    with shell read-only variable.
+ - (tim) [regress/sftp-badcmds.sh regress/sftp-cmds.sh] Fix errors like
+   UX:rm: ERROR: Cannot remove '.' or '..'
 
 20030908
  - (tim) [configure.ac openbsd-compat/getrrsetbyname.c] wrap _getshort and
