--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030910
+ - (dtucker) [configure.ac] Bug #636: Add support for Cray's new X1 machine.
+   Patch from wendyp at cray.com.
+
 20030909
  - (tim) [regress/Makefile] Fixes for building outside of a read-only
    source tree.
