--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20030910
  - (dtucker) [configure.ac] Bug #636: Add support for Cray's new X1 machine.
    Patch from wendyp at cray.com.
+ - (dtucker) [configure.ac] Part of bug #615: tcsendbreak might be a macro.
 
 20030909
  - (tim) [regress/Makefile] Fixes for building outside of a read-only
