--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
  - (dtucker) [configure.ac] Bug #636: Add support for Cray's new X1 machine.
    Patch from wendyp at cray.com.
  - (dtucker) [configure.ac] Part of bug #615: tcsendbreak might be a macro.
+ - (dtucker) [regressh/yes-head.sh] Some platforms (eg Solaris) don't have
+   "yes".
 
 20030909
  - (tim) [regress/Makefile] Fixes for building outside of a read-only
