--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20030911
+ - (dtucker) [configure.ac] Bug #588, #615: Move other libgen tests to after
+   the dirname test, to allow a broken dirname to be detected correctly.
+   Based partially on patch supplied by alex.kiernan at thus.net.  ok djm@
+
 20030910
  - (dtucker) [configure.ac] Bug #636: Add support for Cray's new X1 machine.
    Patch from wendyp at cray.com.
