[regress/agent-ptrace.sh] sh doesn't like "if ! shell_function; then".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20030912
+ - (tim) [regress/agent-ptrace.sh] sh doesn't like "if ! shell_function; then".
+
 20030911
  - (dtucker) [configure.ac] Bug #588, #615: Move other libgen tests to after
    the dirname test, to allow a broken dirname to be detected correctly.
