--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
  - (dtucker) [auth-passwd.c] On AIX, call setauthdb() before loginsuccess(),
    required to correctly reset failed login count when using a password
    registry other than "files" (eg LDAP, see bug #543).
+ - (tim) [configure.ac] define WITH_ABBREV_NO_TTY for SCO.
+   Report by Roger Cornelius.
 
 20030912
  - (tim) [regress/agent-ptrace.sh] sh doesn't like "if ! shell_function; then".
