--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    registry other than "files" (eg LDAP, see bug #543).
  - (tim) [configure.ac] define WITH_ABBREV_NO_TTY for SCO.
    Report by Roger Cornelius.
+ - (dtucker) [auth-pam.c] Use SSHD_PAM_SERVICE for PAM service name, patch
+   from cjwatson at debian.org.
 
 20030912
  - (tim) [regress/agent-ptrace.sh] sh doesn't like "if ! shell_function; then".
