- (dtucker) [Makefile regress/Makefile] Fix portability issues preventing    the regression tests from running with Solaris' make.  Patch from Brian    Poole (raj at cerias.purdue.edu).
Further info:  Solaris' /usr/ccs/bin/make
* requires a space before "+=" (but not "=")
* does not like @for

The bit that relies on a trailing "/" on $OBJ so "rm ${OBJ}$$F works in the
current dir if OBJ isn't set is my fault.  Nasty but it works.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20030914
+ - (dtucker) [Makefile regress/Makefile] Fix portability issues preventing
+   the regression tests from running with Solaris' make.  Patch from Brian
+   Poole (raj at cerias.purdue.edu).
+
 20030913
  - (dtucker) [regress/agent-timeout.sh] Timeout of 5 sec is borderline for
    slower hosts, increase to 10 sec.
