--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
    - deraadt@cvs.openbsd.org 2003/09/16 03:03:47
      [buffer.c]
      do not expand buffer before attempting to reallocate it; markus ok
+ - (tim) [configure.ac] Fix portability issues.
 
 20030914
  - (dtucker) [Makefile regress/Makefile] Fix portability issues preventing
