- (djm) Bug #683: Remove reference to --with-ipv4-default from INSTALL;    djast AT cs.toronto.edu

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030919
+ - (djm) Bug #683: Remove reference to --with-ipv4-default from INSTALL;
+   djast AT cs.toronto.edu
+
 20030918
  - (djm) Bug #652: Fix empty password auth
 
