--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    djast AT cs.toronto.edu
  - (djm) Bug #661: Remove duplicate check for basename; from 
    bugzilla-openssh AT thewrittenword.com
+ - (djm) Bug #641: Allow RedHat RPM building without GTK-2; Patch from
+   jason AT devrandom.org
 
 20030918
  - (djm) Bug #652: Fix empty password auth
