--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@
  - (dtucker) [session.c] Bug #643: Fix size_t -> u_int and fix null deref
    when /etc/default/login doesn't exist or isn't readable.  Fixes from
    jparsons-lists at saffron.net and georg.oppenberg at deu mci com.
+ - (dtucker) [acconfig.h] Updated basename test needs HAVE_BASENAME
 
 20030918
  - (djm) Bug #652: Fix empty password auth
