--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030923
+ - (dtucker) [configure.ac] Bug #644: Fix "make clean" for out-of-tree
+   builds.  Portability corrections from tim@.
+
 20030919
  - (djm) Bug #683: Remove reference to --with-ipv4-default from INSTALL;
    djast AT cs.toronto.edu
