--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,8 @@
    builds.  Portability corrections from tim@.
  - (dtucker) [configure.ac] Bug #655: uid swapping issues on Mac OS X.
    Patch from max at quendi.de.
- - (dtucker) [configure.ac] Bug #657: uid swappping issues on BSDi.
+ - (dtucker) [configure.ac] Bug #657: uid swapping issues on BSDi.
+ - (dtucker) [configure.ac] Bug #653: uid swapping issues on Tru64.
 
 20030919
  - (djm) Bug #683: Remove reference to --with-ipv4-default from INSTALL;
