--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,9 @@
    openbsd-compat/fake-rfc2553.h] Bug #659: Test for and handle systems with
    where gai_strerror is defined as "const char *".  Part of patch supplied
    by bugzilla-openssh at thewrittenword.com
+ - (dtucker) [contrib/cygwin/README contrib/cygwin/ssh-host-config] Update
+   ssh-host-config to match current defaults, bump README version.  Patch from
+   vinschen at redhat.com.
 
 20030919
  - (djm) Bug #683: Remove reference to --with-ipv4-default from INSTALL;
